Fixed navigation bar on mobile and desktop, fixed subsection h2 on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ html, body {
   margin: .25em;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  letter-spacing: 0.5em;
+  letter-spacing: 0.125em;
 }
 
 .subsection-icon {
@@ -235,6 +235,14 @@ html, body {
   padding: 0;
   overflow: hidden;
   background: transparent;
+  position: fixed;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 6em;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .6);
 }
 
 
@@ -281,11 +289,26 @@ html, body {
       margin-top: 4.5em;
       letter-spacing: 0.125em;
     }
+    .top-utility-bar {
+      display: flex;
+      justify-content: space-between;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: transparent;
+      top: 0;
+      height: 4em;
+    }
     #main-content {
       width: 76%;
     }
+    .subsection h2 {
+      letter-spacing: 0.5em;
+    }
     .icon {
       width: 100%;
+      height: inherit;
     }
     .side-scroll-utility {
       position: fixed;
